Login fragment created & Login viewmodel created & Id of btn added in login.xml

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -92,6 +92,7 @@
             </android.support.design.widget.TextInputLayout>
 
             <Button
+                android:id="@+id/btn_log_in"
                 style="@style/Widget.AppCompat.Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
