--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,20 +7,20 @@
 
     <FrameLayout
         android:id="@+id/view_login_loading"
-        android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ProgressBar
             android:layout_width="74dp"
             android:layout_height="74dp"
-            android:gravity="center"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            android:gravity="center" />
 
     </FrameLayout>
 
@@ -87,7 +87,8 @@
                     android:imeOptions="actionNext"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:textColorHint="#6e6e6e" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -106,7 +107,8 @@
                     android:imeOptions="actionDone"
                     android:inputType="textPassword"
                     android:maxLines="1"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:textColorHint="#6e6e6e" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -128,7 +130,7 @@
                 android:layout_height="3dp"
                 android:layout_marginStart="1dp"
                 android:layout_marginEnd="1dp"
-                android:background="@drawable/elevation_light" />
+                android:background="@drawable/elevation" />
 
         </LinearLayout>
     </ScrollView>
