--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <!-- Base -->
     <color name="white_dark">#f4f4f4</color>
     <color name="white">#ffffff</color>
+    <color name="white_semi_transparent">#3bffffff</color>
     <color name="blue_light">#4e92df</color>
     <color name="orange">#ff9b00</color>
     <color name="greyish_brown">#414141</color>
