--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -96,9 +96,8 @@
 
             <android.support.v7.widget.AppCompatButton
                 android:id="@+id/btn_log_in"
-                style="@style/Widget.AppCompat.Button"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="36dp"
                 android:layout_marginTop="31dp"
                 android:background="@color/orange"
                 android:fontFamily="sans-serif-medium"
@@ -106,7 +105,7 @@
                 android:textAllCaps="true"
                 android:textColor="@color/white"
                 android:textSize="13sp"
-                android:textStyle="bold" />
+                android:textStyle="normal" />
 
             <View
                 android:layout_width="match_parent"
